# src/swagger/swagger.json
@@ -548,7 +548,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Creates a new WhatsApp group with specified title and participants",
+                "description": "Creates a new WhatsApp group with specified title, participants and permissions",
                 "consumes": [
                     "application/json"
                 ],
@@ -561,13 +561,25 @@
                 "summary": "Create a new group",
                 "parameters": [
                     {
-                        "description": "Group creation request",
+                        "description": "Group creation request. locked: only admins can edit settings; announce: only admins can send messages; member_add_mode: 'admin_add' or 'all_member_add'; join_approval_required: require approval to join via link",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
                             "type": "object",
                             "properties": {
+                                "announce": {
+                                    "type": "boolean"
+                                },
+                                "join_approval_required": {
+                                    "type": "boolean"
+                                },
+                                "locked": {
+                                    "type": "boolean"
+                                },
+                                "member_add_mode": {
+                                    "type": "string"
+                                },
                                 "participants": {
                                     "type": "array",
                                     "items": {
@@ -2664,6 +2676,10 @@
                 "master_key": {
                     "type": "string"
                 },
+                "password": {
+                    "description": "default password for database seeding",
+                    "type": "string"
+                },
                 "prefix": {
                     "type": "string"
                 },
@@ -2676,6 +2692,10 @@
                 },
                 "use_ssl_websocket": {
                     "type": "boolean"
+                },
+                "user": {
+                    "description": "default user for database seeding",
+                    "type": "string"
                 },
                 "webhook_timeout": {
                     "description": "webhook timeout in milliseconds",
